# bace

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/arithmetic_circuit/: arithmetic_circuit.hpp  arithmetic_circuit.tcc
src/profiling/: profile.cpp
src/profiling/logs/08-17_01:43/: naive-1-thread.csv  naive-2-thread.csv  naive-4-thread.csv  naive-8-thread.csv  naive-prover-1.ps  naive-prover-2.ps  naive-prover-4.ps  naive-prover-8.ps  naive-verifier-1.ps  naive-verifier-2.ps  naive-verifier-4.ps  naive-verifier-8.ps  naive.ps  prover-1-thread.csv  prover-2-thread.csv  prover-4-thread.csv  prover-8-thread.csv  prover.ps  verifier-1-thread.csv  verifier-2-thread.csv  verifier-4-thread.csv  verifier-8-thread.csv  verifier.ps
src/profiling/plot/: runtime_plot.gp
src/proof_system/: common.hpp  common.tcc  domain.hpp  domain.tcc  naive_evaluation.hpp  naive_evaluation.tcc  prover.hpp  prover.tcc  verifier.hpp  verifier.tcc
src/test/: test_circuit.cpp  test_verifier.cpp
